<resources>
    <string name="app_name">3DPrinter</string>
    <string name="_3d_print">3D Print</string>
    <string name="todo">TODO</string>
    <string name="pagina_principal">Pagina Principal</string>
    <string name="users">Usuarios</string>
    <string name="printers">Impresoras</string>
    <string name="lista_de_usuarios">Lista de Usuarios</string>
    <string name="registro_de_usuarios">Registro de Usuarios</string>
    <string name="userName">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirmacion">Confirmacion</string>
    <string name="rol">Rol:</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="login">Login</string>
    <string name="logged_as">Usuario:</string>
    <string name="lista_de_impresoras">Lista de Impresoras</string>
    <string name="nueva_impresora">Nueva Impresora</string>
    <string name="printer_name">Printer Name</string>
    <string name="printer_brand">Printer Brand</string>
    <string name="printer_model">Printer Model</string>
    <string name="registrar_impresora">Registrar Impresora</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="registro_de_impresoras">Registro de Impresoras</string>
    <string name="printerBrand">Marca</string>
    <string name="printerModel">Modelo</string>
    <string name="printerUrlPhoto">Url de la Imagen</string>
    <string name="no_tiene_usuario_registrese">No tiene Usuario? Registrese</string>
    <string name="salir">Salir</string>
    <string name="orden_de_servicio">Orden de Servicio</string>
    <string name="administrador">Administrador?</string>
    <string name="actualizar_impresora">Actualizacion de Impresora</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizar_usuario">Actualizacion de Usuario</string>
    <string name="lista_de_ordenes">Ordenes Creadas</string>
    <string name="nueva_orden">Nueva Orden</string>
    <string name="actualizar_orden">Actualizar Orden</string>
    <string name="registrar_orden">Registrar Orden</string>
    <string name="activo">Activo?</string>
    <string name="cuenta_creada_outside_done">Cuenta de Usuario Creada. Comuniquese con un Admininstrador para su activacion</string>
</resources>