<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterUserActivity">

    <TextView
        android:id="@+id/lblUserRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/nuevo_usuario"
        android:textAlignment="center"
        android:textColor="@color/iconsColor"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/llUserRegisterDataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtRegisterUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/userName"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtRegisterUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtRegisterUserPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirmacion"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtRegisterUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtRegisterUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRegisterUserRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/registrar_usuario" />

    </LinearLayout>

</LinearLayout>