<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PrinterManagementActivity">

    <TextView
        android:id="@+id/lblPrinterManteinanceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/registro_de_impresoras"
        android:textAlignment="center"
        android:textColor="@color/iconsColor"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/llPrinterDataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtPrinterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/userName"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtPrinterBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/printerBrand"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtPrinterModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/printerModel"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtPrinterUrlPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/printerUrlPhoto"
            android:inputType="textUri"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnPrinterRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/registrar_impresora" />

    </LinearLayout>

</LinearLayout>