<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UserManagementActivity">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_usuarios"
        android:textColor="@color/iconsColor"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" >

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/txtUserUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:inputType="text"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/txtUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/txtUserPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmacion"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/txtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/txtUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rol"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/spRoles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registrar"
            android:onClick="onClick"/>


    </LinearLayout>

</LinearLayout>