<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMainHeader"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@color/colorGris">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="105dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/Principal"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/pagina_principal"
                android:textColor="@color/iconsColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivLogo"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvUsers"
            android:layout_width="373dp"
            android:layout_height="104dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:background="@color/colorGris"
            app:cardBackgroundColor="@color/colorGris"
            app:cardCornerRadius="10sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/ivUsers"
                android:layout_width="80dp"
                android:layout_height="81dp"
                android:src="@drawable/user"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/todo"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/tvUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="70dp"
                android:text="@string/users"
                android:layout_gravity="center_vertical"
                android:textColor="@color/iconsColor"
                android:textSize="24sp"
                android:textStyle="bold"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPrinters"
            android:layout_width="373dp"
            android:layout_height="104dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:background="@color/colorGris"
            app:cardBackgroundColor="@color/colorGris"
            app:cardCornerRadius="10sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/ivPrinters"
                android:layout_width="80dp"
                android:layout_height="81dp"
                android:src="@drawable/printers"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/todo"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/tvPrinters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="70dp"
                android:text="@string/printers"
                android:layout_gravity="center_vertical"
                android:textColor="@color/iconsColor"
                android:textSize="24sp"
                android:textStyle="bold"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvServiceOrders"
            android:layout_width="373dp"
            android:layout_height="104dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:background="@color/colorGris"
            app:cardBackgroundColor="@color/colorGris"
            app:cardCornerRadius="10sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/ivServiceOrders"
                android:layout_width="80dp"
                android:layout_height="81dp"
                android:src="@drawable/orders"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/todo"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/tvServiceOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="70dp"
                android:text="Orden de Servicio"
                android:layout_gravity="center_vertical"
                android:textColor="@color/iconsColor"
                android:textSize="24sp"
                android:textStyle="bold"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>